# logica-fuzzy

./: README.md  pyproject.toml
src/: db.py  fuzzy.py  main.py  utils.py
